--- a/views/loginview.hbs
+++ b/views/loginview.hbs
@@ -1,52 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{title}}</title>
-    <script type="text/javascript" src='/javascripts/jquery-3.1.1.js'></script>
-    <script type="text/javascript" src='/javascripts/formscript1.js'></script>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/resetcss.css' />
-  </head>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="stylesheets/style.css" >
+  <meta name="viewport" content="initial-scale=1">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+</head>
 <body>
-<!-- Header -->
-<div class="container">
-      <div class="full-header">
-        <div class="header-container">
-            <div class="cont-logo">
-                <a class="logo" type="button">
-                    <em></em>
-                </a>
+  <div class="cont">
+    <div class="background">
+      <div class="modal">
+        <div class="box-logo">
+          <img src="images/LOG-U.gif" alt="">
+        </div>
+        <div class="box-title">
+          <h1>Alcanzá tu mejor forma de estudiar</h1>
+        </div>
+          <div class="box-content">
+        <p class="text" >Por favor completá el formulario</p>
+          <form class="formulario">
+            <input class="form" type="text" name="correo"  placeholder="Correo ">
+            <div class="psw-hide">
+              <input class="form" type="PASSWORD" name="contraseña"  placeholder="Contraseña">
+              <a href="#"><span class="eye"></span></a>
             </div>
-            <div >
-                <input type="text" class="search" placeholder="Buscklññar...">
-            </div>
-            <a href='#' class="newFolder jsnewfolder"></a>
+          </form>
+          <input class="button" type="button" value="Ingresar">
+          <a href="#">Regístrate</a>
+          <a href="#"> Olvidaste tu Contraseña</a>
         </div>
       </div>
-
-<!--Main-->
-  <div class="main">
-      <div class="folders">
-      {{{body}}}
-  </div>
-  <!--Modal-->
-  <div class="m-background">
-  </div>
-    <div class="modal">
-        <div class="box-logo">
-        <img src="images/LOG-U.gif" alt="">
-      </div>
-      <div class="box-title">
-          <h1>Agregar una nueva carpeta</h1>
-      </div>
-      <div class="box-content">
-    <form class="newfile form1"  method="post">
-      <input class="subject" type="text" name="subject" placeholder="Materia">
-      <input class="teacher"  type="text" name="teacher" placeholder="Profesor">
-      <input class="level" type="text" name="level" placeholder="Año">
-      <button class="button jsbutton" type="button">Crear</button>
-    </form>
-  </div>
     </div>
-    </body>
-  </html>
+  </div>
+</body>
+</html>
