--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,38 +1,38 @@
 /*Tags*/
 
 body{
-    background: url('../images/fondo.jpg') no-repeat ;
-    background-size: cover;
+  background: url('../images/fondo.jpg') no-repeat ;
+  background-size: cover;
 }
 
 input, button{
-    width:300px ;
-    margin-bottom:15px ;
-    background-color: #fff;
-    border: solid 1px #ccc;
-    box-shadow: none;
-    position: relative;
-    -webkit-font-smoothing: antialiased;
-    border-radius: 3px;
-    font-weight: bold;
-    padding: 10px;
-    box-sizing: border-box;
-    color: #333;
-    font-size: 14px;
+  width:300px ;
+  margin-bottom:15px ;
+  background-color: #fff;
+  border: solid 1px #ccc;
+  box-shadow: none;
+  position: relative;
+  -webkit-font-smoothing: antialiased;
+  border-radius: 3px;
+  font-weight: bold;
+  padding: 10px;
+  box-sizing: border-box;
+  color: #333;
+  font-size: 14px;
 }
 
 img{
-    height:140px;
-    width: 250px;
-    border-radius: 5px;
-    padding-right: 50px;
+  height:140px;
+  width: 250px;
+  border-radius: 5px;
+  padding-right: 50px;
 }
 
 p{
+  font-size: 20px;
+  font-family: "Segoe UI ";
+  color: black;
 
-    font-size: 20px;
-    font-family: "Segoe UI Black";
-    color: black;
 }
 
 /*Class*/
@@ -40,68 +40,69 @@ p{
 /*Full-app*/
 
 .container {
-     display: flex;
-     flex-wrap: wrap;
-     text-align: center;
-     font-family: "Javanese Text", serif ;
- }
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  font-family: "Javanese Text", serif ;
+}
 /*Header*/
 
 .full-header{
 
-    background-color: white;
-    -webkit-box-shadow: 0 1px 0 0 rgba(226, 30, 30, 0.55);
-    box-shadow: 0 2px 0 0 rgba(255, 8, 8, 0.65);
-    height: auto;
-    width: 100%;
+  background-color: white;
+  -webkit-box-shadow: 0 1px 0 0 rgba(226, 30, 30, 0.55);
+  box-shadow: 0 2px 0 0 rgba(255, 8, 8, 0.65);
+  height: auto;
+  width: 100%;
 }
 
 .header-container{
-    display: -webkit-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: auto;
-    position: static;
-    width: auto;
-    padding: 10px 10px;
+  display: -webkit-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: auto;
+  position: static;
+  width: auto;
+  padding: 10px 10px;
 }
 
 .cont-logo{
-    width: 90px;
-    height: 60px;
-    background: url('../images/logo.png') no-repeat;
-    background-size: 60%;
-    vertical-align: middle;
+  width: 90px;
+  height: 60px;
+  background: url('../images/logo.png') no-repeat;
+  background-size: 60%;
+  vertical-align: middle;
 }
 
 .search {
-    font-size: 20px;
-    border: solid 2px lightgrey;
-    width: 450px;
-    height: 40px;
-    border-radius: 5px;
+  display: block;
+  font-size: 20px;
+  border: solid 2px lightgrey;
+  width: 450px;
+  height: 40px;
+  border-radius: 5px;
 }
 
 /*Main*/
 
 .main{
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 10px;
 
- }
+}
 
 .folders {
-    display:flex ;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: #F0EFED;
-    border-radius: 5px;
-    margin: 30px;
-    padding: 0px;
-    padding-top: 20px;
-    padding-bottom: 10px;
+  display:flex ;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: #F0EFED;
+  border-radius: 5px;
+  margin: 30px;
+  padding: 0px;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .select:hover {
@@ -115,27 +116,28 @@ a.linksubject{
 }
 
 .img{
-    border-radius: 5px;
-    height:140px;
-    width: 310px;
+  border-radius: 5px;
+  height:140px;
+  width: 310px;
 
 }
 
 .text{
-    font-size: 18px;
-    font-family: "Segoe UI";
-    color: black;
-    text-decoration: none;
-    padding: 10px;
+  font-size: 18px;
+  font-family: "Segoe UI";
+  color: black;
+  text-decoration: none;
+  padding: 10px;
 }
 
 /*new file*/
 .newFolder{
+  display: block;
   position: relative;
-  top: 10px;
+  top: 1px;
   left:20px ;
   height:40px;
-  width: 40px;
+  width: 45px;
   background: url('../images/newfolder.png') no-repeat;
   background-size: 90%;
 }
@@ -163,63 +165,102 @@ a.linksubject{
   margin: auto;
 }
 
+.modal_login{
+  display:block;
+}
 .box-logo > img{
-    position: relative;
-    height: 70px;
-    width: 90px;
-    bottom: 40px;
+  position: relative;
+  height: 70px;
+  width: 90px;
+  bottom: 40px;
 }
 
 .box-logo{
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    height: 0px;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  height: 0px;
 }
 
 .box-title{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    color: #000;
-    font-family: "Ebrima";
-    font-size: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: teal;
-    border-radius: 3px;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: #000;
+  font-family: "Ebrima";
+  font-size: 25px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: teal;
+  border-radius: 3px;
+  color: white;
 }
 
 .box-content{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  padding-top: 20px;
+
 }
+
+.eye{
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 72%;
+  height: 32px;
+  width: 32px;
+  background: url('../images/eye.png') no-repeat;
+}
+
+.eye-hide{
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 72%;
+  height: 32px;
+  width: 32px;
+  background: url('../images/eye-hide.png') no-repeat;
+}
+
 
 .button{
   font-size: 20px;
-    color:white;
-    background-color: #F82D63;
-    border-radius: 5px;
+  color:white;
+  background-color: #F82D63;
+  border-radius: 5px;
 }
 
 .button:focus{
-    color: purple;
+  color: purple;
+
+}
+
+.btn-container{
+  display: flex;
+  flex-direction: row-reverse;
+  width: 65%;
+}
+
+.btn-login{
+
+}
+
+.btn-register{
 
 }
 
 .error{
-background-color: #F82D63;
-padding: 6px 12px;
-border-radius: 4px;
-color: white;
-font-weight: bold;
-margin-left: 16px;
-margin-top: 6px;
-position: absolute;
+  background-color: #F82D63;
+  padding: 6px 12px;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  margin-left: 16px;
+  margin-top: 6px;
+  position: absolute;
 }
 
 
